samples/_failures_safe/1761558649_ca271f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d407862.c: In function ‘analyze_results’:
./samples/SAFE/__tmp_1d407862.c:148:60: error: missing terminating ' character
  148 |             result->most_frequent_word[MAX_WORD_LEN - 1] = '\
      |                                                            ^~
./samples/SAFE/__tmp_1d407862.c:148:13: error: expected expression at end of input
  148 |             result->most_frequent_word[MAX_WORD_LEN - 1] = '\
      |             ^~~~~~
./samples/SAFE/__tmp_1d407862.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d407862.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d407862.c:148:13: error: expected declaration or statement at end of input
